--- a/notebook/data_checking.ipynb
+++ b/notebook/data_checking.ipynb
@@ -342,6 +342,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 135890/135890 [00:55<00:00, 2470.42it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "\n",
+    "def detect_repeated_patterns(text):\n",
+    "    pattern = re.compile(r\"(\\b.+?\\b)(?:\\.\\1)+\")\n",
+    "    match = pattern.search(text)\n",
+    "    if match:\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "# Enable progress_apply\n",
+    "tqdm.pandas()\n",
+    "\n",
+    "df[\"has_repeated_pattern\"] = df[\"translated_text\"].progress_apply(\n",
+    "    detect_repeated_patterns\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -360,6 +395,64 @@
     "\n",
     "print(f\"Data saved to {arrow_file_path}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Saving the dataset (0/1 shards):   0%|          | 0/3 [00:00<?, ? examples/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Saving the dataset (1/1 shards): 100%|██████████| 3/3 [00:00<00:00, 380.98 examples/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset saved to dataset.arrow\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datasets import Dataset\n",
+    "import datasets\n",
+    "\n",
+    "# Example data: Replace this with your transformer dataset\n",
+    "data = {\"column_1\": [1, 2, 3], \"column_2\": [\"a\", \"b\", \"c\"]}\n",
+    "dataset = Dataset.from_dict(data)\n",
+    "\n",
+    "# Define the file path for saving\n",
+    "file_path = \"dataset.arrow\"\n",
+    "\n",
+    "# Save the dataset as a .arrow file\n",
+    "dataset.save_to_disk(file_path)\n",
+    "\n",
+    "print(f\"Dataset saved to {file_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
