--- a/fine-tuning-llama3-MT.ipynb
+++ b/fine-tuning-llama3-MT.ipynb
@@ -663,7 +663,7 @@
    "name": "custom_py311"
   },
   "kernelspec": {
-   "display_name": "mt_luxembourgish_env",
+   "display_name": "vllm_env_lujun",
    "language": "python",
    "name": "python3"
   },
@@ -677,7 +677,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.10"
   },
   "microsoft": {
    "host": {
