--- a/notebook/model_inference.ipynb
+++ b/notebook/model_inference.ipynb
@@ -708,7 +708,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mt_luxembourgish_env",
+   "display_name": "vllm_env_lujun",
    "language": "python",
    "name": "python3"
   },
@@ -722,7 +722,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
