update code SFT and data checking

--- a/notebook/data_checking.ipynb
+++ b/notebook/data_checking.ipynb
@@ -196,7 +196,7 @@
     "\n",
     "\n",
     "df = pd.read_csv(\n",
-    "    \"/home/lujun_li/projects/mt_luxembourgish/data/fake_targets/translation_llama3_70b_complete.csv\"\n",
+    "    \"/home/snt/projects_lujun/mt_luxembourgish/data/fake_targets/translation_llama3_70b_complete.csv\"\n",
     ")"
    ]
   },
@@ -217,7 +217,7 @@
    "source": [
     "import fasttext\n",
     "\n",
-    "model_path = \"/home/lujun_li/projects/mt_luxembourgish/models/lang_dect/lid218e.bin\"\n",
+    "model_path = \"/home/snt/llm_models/lid218e.bin\"\n",
     "model = fasttext.load_model(model_path)\n",
     "\n",
     "\n",
@@ -320,7 +320,7 @@
     "print(\"Initial dataset size:\", df.shape)\n",
     "\n",
     "# Filter by 'is_english_translated'\n",
-    "df = df[df[\"is_english_translated\"] == True]\n",
+    "df = df[df[\"is_english_translated\"]]\n",
     "print(\"Size after filtering by 'is_english_translated':\", df.shape)\n",
     "\n",
     "# Filter by 'quality_issues' != 1\n",
@@ -337,89 +337,30 @@
     "\n",
     "# Filter by 'quality_issues' != 4\n",
     "df = df[df[\"quality_issues\"] != 4]\n",
-    "print(\"Size after filtering 'quality_issues' != 4:\", df.shape)"
+    "print(\"Size after filtering 'quality_issues' != 4:\", df.shape)\n",
+    "\n",
+    "\n",
+    "df[\"model\"] = \"llama3.2_70b\"\n",
+    "df = df[[\"model\", \"subsentence\", \"translated_text\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 135890/135890 [00:55<00:00, 2470.42it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import re\n",
-    "\n",
-    "\n",
-    "def detect_repeated_patterns(text):\n",
-    "    pattern = re.compile(r\"(\\b.+?\\b)(?:\\.\\1)+\")\n",
-    "    match = pattern.search(text)\n",
-    "    if match:\n",
-    "        return True\n",
-    "    return False\n",
-    "\n",
-    "\n",
-    "from tqdm import tqdm\n",
-    "\n",
-    "# Enable progress_apply\n",
-    "tqdm.pandas()\n",
-    "\n",
-    "df[\"has_repeated_pattern\"] = df[\"translated_text\"].progress_apply(\n",
-    "    detect_repeated_patterns\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pyarrow as pa\n",
-    "import pyarrow.parquet as pq\n",
-    "\n",
-    "# Convert DataFrame to Arrow Table\n",
-    "arrow_table = pa.Table.from_pandas(df)\n",
-    "\n",
-    "# Save the Arrow Table to a .arrow file\n",
-    "arrow_file_path = (\n",
-    "    \"/home/lujun_li/projects/mt_luxembourgish/data/fake_targets/filtered_data.arrow\"\n",
-    ")\n",
-    "pq.write_table(arrow_table, arrow_file_path)\n",
-    "\n",
-    "print(f\"Data saved to {arrow_file_path}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Saving the dataset (0/1 shards):   0%|          | 0/3 [00:00<?, ? examples/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Saving the dataset (1/1 shards): 100%|██████████| 3/3 [00:00<00:00, 380.98 examples/s]"
+      "Saving the dataset (1/1 shards): 100%|██████████| 128608/128608 [00:00<00:00, 812897.73 examples/s] "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset saved to dataset.arrow\n"
+      "Data saved to /home/snt/projects_lujun/mt_luxembourgish/data/llama3_70b_complete_subsentences_filtered.arrow\n"
      ]
     },
     {
@@ -431,33 +372,84 @@
     }
    ],
    "source": [
+    "import pyarrow as pa\n",
+    "import pyarrow.parquet as pq\n",
     "from datasets import Dataset\n",
-    "import datasets\n",
     "\n",
-    "# Example data: Replace this with your transformer dataset\n",
-    "data = {\"column_1\": [1, 2, 3], \"column_2\": [\"a\", \"b\", \"c\"]}\n",
-    "dataset = Dataset.from_dict(data)\n",
-    "\n",
-    "# Define the file path for saving\n",
-    "file_path = \"dataset.arrow\"\n",
-    "\n",
-    "# Save the dataset as a .arrow file\n",
-    "dataset.save_to_disk(file_path)\n",
-    "\n",
-    "print(f\"Dataset saved to {file_path}\")"
+    "df[\"model\"] = \"llama3.2_70b\"\n",
+    "dataset = Dataset.from_pandas(df[[\"model\", \"subsentence\", \"translated_text\"]])\n",
+    "# Save the Arrow Table to a .arrow file\n",
+    "arrow_file_path = \"/home/snt/projects_lujun/mt_luxembourgish/data/llama3_70b_complete_subsentences_filtered.arrow\"\n",
+    "dataset.save_to_disk(arrow_file_path)\n",
+    "print(f\"Data saved to {arrow_file_path}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pyarrow as pa\n",
+    "import pyarrow.parquet as pq\n",
+    "from datasets import Dataset\n",
+    "\n",
+    "nllb_df = pd.read_csv(\n",
+    "    \"/home/snt/projects_lujun/mt_luxembourgish/data/fake_targets/translation_nllb_complete.csv\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nllb_df[\"model\"] = \"NLLB\"\n",
+    "nllb_df = nllb_df[[\"model\", \"subsentence\", \"translated_text\"]]\n",
+    "dataset = Dataset.from_pandas(nllb_df)\n",
+    "concatenated_df = pd.concat([df, nllb_df], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Saving the dataset (1/1 shards): 100%|██████████| 264498/264498 [00:00<00:00, 934818.03 examples/s] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data saved to /home/snt/projects_lujun/mt_luxembourgish/data/nllb_llama_complete_subsentences_filtered.arrow\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = Dataset.from_pandas(concatenated_df)\n",
+    "# Save the Arrow Table to a .arrow file\n",
+    "arrow_file_path = \"/home/snt/projects_lujun/mt_luxembourgish/data/nllb_llama_complete_subsentences_filtered.arrow\"\n",
+    "dataset.save_to_disk(arrow_file_path)\n",
+    "print(f\"Data saved to {arrow_file_path}\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mt_luxembourgish_env",
+   "display_name": "mt_lux_env",
    "language": "python",
    "name": "python3"
   },
@@ -471,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
